--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "private": true,
   "dependencies": {
     "compression": "^1.7.3",
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
+    "express": "^4.16.4",
     "@angular/animations": "^6.1.7",
     "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.0",
@@ -29,6 +27,8 @@
     "ngx-textarea-autosize": "^2.0.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26",
+  },
+  "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "~6.2.1",
     "@angular/compiler-cli": "^6.1.0",
