--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ng2-currency-mask": "^5.3.1",
     "ngx-textarea-autosize": "^2.0.0",
     "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
